src/modules/playlist/components/PlaylistCard/PlaylistCard.module.scss
.playlist-card {
  @apply duration-200 flex flex-col p-4 relative rounded-md transition-colors w-full;
  &-image {
    @apply aspect-square object-cover rounded-md shadow-xl w-full;
  }
  &-link {
    @apply absolute h-full left-0 top-0 w-full;
  }
  &-name {
    @apply font-semibold mt-4 text-sm truncate;
  }
  &-owner {
    @apply duration-200 mb-4 mt-2 text-sm transition-colors truncate max-w-full w-fit z-10;
  }
  &-play {
    @apply aspect-square flex items-center justify-center w-full;
    & button {
      @apply z-10;
    }
  }
}

